<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color ="@color/colorBackground"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/helloTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PhuongLe"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toEndOf="@id/helloTv"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:tint="@color/colorWhite" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/helloTv"
                android:layout_margin="15dp"
            android:background="@drawable/white_rectangle_background"
                >

                <EditText
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint="Search..."
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"

                    />

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_icon_background"
                    android:src="@drawable/ic_baseline_search_24"
                    android:padding="6dp"
                    app:tint="@color/colorPrimary"/>

                     app:srcCompat="@android:drawable/ic_menu_search" />

            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/goal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="@drawable/white_rectangle_background"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp"
                            app:layout_constraintDimensionRatio="H,1:1">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:padding="8dp"
                                android:src="@drawable/goals" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goal"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/finance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="@drawable/white_rectangle_background"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp"
                            app:layout_constraintDimensionRatio="H,1:1">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:padding="8dp"
                                android:src="@drawable/finance" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/finance"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/health"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="@drawable/white_rectangle_background"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp"
                            app:layout_constraintDimensionRatio="H,1:1">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:padding="8dp"
                                android:src="@drawable/health" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/health"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/comfort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:background="@drawable/white_rectangle_background"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="15dp"
                            app:layout_constraintDimensionRatio="H,1:1">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:padding="8dp"
                                android:src="@drawable/comfort" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/comfort"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/trending_background"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/white_rectangle_background"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/trending2"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/favorite"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_favorite_24"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/colorWhite" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:ellipsize="end"
                            android:maxLines="3"
                            android:text="@string/lorem"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/favorite" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/colorWhite"
        app:menu="@menu/bottom_navigation"
        app:itemIconSize="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    